# Loki-Porfolio-Assistant

./: .gitignore  CMakeLists.txt  Dockerfile  GIT.md  README.md  TODO.txt  notes.txt  run-cpp.sh  run-python.sh  run.sh  settings.json  watchlist.txt
deprecated/: CMakeLists.txt  Dockerfile
deprecated/include/: Utilities.h  json.hpp  slacking.hpp
include/: AlphaVantageConnection.h  CurlLibrary.h  GlobalQuotePeriodic.h  Periodic.h  Utilities.h
src/: AlphaVantageConnection.cpp  CurlLibrary.cpp  EvaluateSnP.py  GlobalQuotePeriodic.cpp  LokiDiscord.py  config.cfg  config.py  main.cpp
src/alpaca/: AlpacaConnection.py  AlpacaConnector.py  main.py
src/alphavantage/: AlphaVantageConnector.py
src/finmodelingprep/: FinModelPrepConnector.py
src/python/: EvaluateSnP.py  JsonNormalizer.py  Logger.py  LokiDiscord.py  LokiLogger.py  config.cfg  config.py  evaluate_companies.py  main.py  scrape_ark_purchases.py
src/python/alpaca/: AlpacaConnector.py
src/python/alphavantage/: AlphaVantageConnector.py
src/python/discord/: DiscordConnector.py
src/python/marketwatch/: StockNewsScraper.py
src/python/scraper/: ArkPurchasesDownloader.py  ArkPurchasesScraper.py  ShortInterestScraper.py  StockNewsScraper.py
src/python/utils/: Exceptions.py  LokiDiscordHelpers.py
src/scraper/: ArkPurchasesScraper.py  FuturesScraper.py  ShortInterestScraper.py  StockNewsScraper.py
src/twitter/: TwitterScraper.py
src/utils/: Exceptions.py  LokiDiscordHelpers.py  LokiLogger.py  RequestsHelper.py
